--- a/latihan-web-5.7
+++ b/latihan-web-5.7
@@ -30,3 +30,15 @@ render(){
     font-weight:bold;
     color:#365899;
 }
+import React,{Component}from 'react';
+import Card from '.views/components/Card/Card';
+
+export default class Main extends Component{
+    render(){
+        return(
+            <Card>
+                <p>Build encapsulated components that manage their own state ,then compose them to make Complex UIs</p>
+            </Card>
+        );
+    }
+}
